# playgound

./: .pre-commit-config.yaml  README.md  beta_bin.ipynb  complex_pydantic_parsing.ipynb  match_case.py  pyproject.toml
.github/: copilot-instructions.md  git-commit-instructions.md
docs/: preselection.md  swap_config.md
experimental/: QC exercises.ipynb  qops.py
